only underscores in plate ids allowed in bioscan

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -640,7 +640,7 @@
     "        \n",
     "    # plate names validation\n",
     "    plates = df[plate_col].drop_duplicates()\n",
-    "    plate_name_template = ('^[A-Z]{4}-[0-9]{3}$|^[A-Z]{4}_[0-9]{3}$' if bioscan else '^[A-Z]{4}_[0-9]{3}$')\n",
+    "    plate_name_template = '^[A-Z]{4}_[0-9]{3}$'\n",
     "    wrong_plate_names = plates[~plates.str.match(plate_name_template, na='')]\n",
     "    if len(wrong_plate_names) > 0:\n",
     "        logging.error(f'plate names {wrong_plate_names.to_list()} do not match template ABCD_1234')\n",
