fix filename matching

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -618,9 +618,9 @@
     "        if not is_recommended_regex.all():\n",
     "            offending_values = list(series[~is_recommended_regex & is_valid_regex].unique())\n",
     "            s = index_ranges(series[~is_recommended_regex & is_valid_regex])\n",
-    "        msg = (f'{col} format suggestion for SERIES {s}: found {offending_values} - '\n",
-    "              f'should be in PT[n]H format')\n",
-    "        logging.warning(msg)\n",
+    "            msg = (f'{col} format suggestion for SERIES {s}: found {offending_values} - '\n",
+    "                  f'should be in PT[n]H format')\n",
+    "            logging.warning(msg)\n",
     "        "
    ]
   },
@@ -1342,13 +1342,13 @@
     "    \n",
     "    # ABCD_YYMM_\n",
     "    v = bioscan_version.strip('v')\n",
-    "    fn_regex = f'^{partner_code}_(2[0-3])(0[1-9]|1[0-2])_BIOSCAN_Manifest_V{v}.*xlsx$'\n",
+    "    fn_regex = fr'^{partner_code}_(2[0-4])(0[1-9]|1[0-2])_BIOSCAN_Manifest_V{v}.*.xlsx$'\n",
     "    \n",
     "    fn_basename = os.path.basename(input_fn)\n",
     "    \n",
     "    if not re.match(fn_regex, fn_basename):\n",
     "        logging.warning(f'input filename {fn_basename} does not match '\n",
-    "                        f'{partner_code}_YYMM_BIOSCAN_Manifest_V{v}*xlsx')"
+    "                        f'{partner_code}_YYMM_BIOSCAN_Manifest_V{v}*.xlsx')"
    ]
   },
   {
