fix sample count reporting

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -681,7 +681,7 @@
     "    col_id = range(1,13)\n",
     "    expected_wells = [r + str(c) for (r,c) in itertools.product(row_id, col_id)]\n",
     "    \n",
-    "    # different plate-only values across bioscan versions\n",
+    "    # different plate-only values between bioscan versions\n",
     "    if bioscan_version == 'v2':\n",
     "        plate_only_vals = ['PLATE_ONLY']\n",
     "    elif bioscan_version == 'v3':\n",
@@ -711,8 +711,12 @@
     "                    msg += ', '\n",
     "                msg += f'wells {observed_wells_set - expected_wells_set} are excessive'\n",
     "            logging.error(msg)\n",
+    "            \n",
+    "    n_plate_only = df[well_col].isin(plate_only_vals).sum()\n",
     "    \n",
-    "    logging.info(f'{df.shape[0]} samples found across {df[plate_col].nunique()} plates')\n",
+    "    logging.info(f'found {df.shape[0] - n_plate_only} samples across '\n",
+    "                 f'{df[plate_col].nunique() - n_plate_only} plates and '\n",
+    "                 f'{n_plate_only} plate-only entries')\n",
     "    \n",
     "\n",
     "    return df, gal, selected_partner_code\n",
@@ -816,8 +820,9 @@
     "                              f'at SERIES {index_ranges(excessive_blank_info_df)} - these will be deleted')\n",
     "                df.loc[is_blank, col] = ''\n",
     "    \n",
-    "    logging.info(f'{is_blank.sum()} blanks located across {df.RACK_OR_PLATE_ID.nunique()} plates, '\n",
-    "                 f'{non_blank_df.shape[0]} non-blank samples will be further validated')\n",
+    "    logging.info(f'found and checked {is_blank.sum()} blank samples, '\n",
+    "                 f'{non_blank_df.shape[0]} non-blank samples and plate-only entries '\n",
+    "                 f'will be further validated')\n",
     "    \n",
     "    \n",
     "    return is_blank\n",
