add catch lot vs collection date check

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -451,9 +451,13 @@
     "        template_cols.remove('CATCH_SOLUTION')\n",
     "        template_cols.remove('AMOUNT_OF_CATCH_PLATED')\n",
     "        template_cols.update(['IDENTIFIER_AFFILIATION'])\n",
-    "        \n",
-    "    if data_cols - template_cols != set():\n",
-    "        logging.info(f'extra columns in filled manifest compared to template: {data_cols - template_cols}')\n",
+    "    \n",
+    "    extra_cols = data_cols - template_cols\n",
+    "    if extra_cols != set():\n",
+    "        logging.info(f'extra columns in filled manifest compared to template: {extra_cols}')\n",
+    "        for col in extra_cols:\n",
+    "            if col != col.upper().replace(' ','_'):\n",
+    "                logging.warning(f'extra column name \"{col}\" is not upppercase or contains spaces')\n",
     "    # do not report missing optional columns\n",
     "    if template_cols - data_cols - optional_cols != set():\n",
     "        logging.error(f'template columns missing from filled manifest: {template_cols - data_cols}')\n",
@@ -906,6 +910,29 @@
     "        series = series.str.strip('*')\n",
     "    df[col] = series\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_catch_lot_dates(df):\n",
+    "    \n",
+    "    logging.debug(f'checking that CATCH_LOT does not span multiple DATE_OF_COLLECTION')\n",
+    "    \n",
+    "    for col in ('CATCH_LOT','DATE_OF_COLLECTION'):\n",
+    "        if col not in df.columns:\n",
+    "            logging.error(f'{col} not found in manifest, skipping catch lot validation')\n",
+    "            return\n",
+    "    \n",
+    "    biosc_catch_lot_df = df[df.CATCH_LOT.str.match(r'^C\\d{3}[A-Z]$')]\n",
+    "    \n",
+    "    for catch_lot, catch_lot_df in biosc_catch_lot_df.groupby('CATCH_LOT'):\n",
+    "        if catch_lot_df.DATE_OF_COLLECTION.nunique() > 1:\n",
+    "            logging.error(f'catch lot {catch_lot} entries span multiple dates: '\n",
+    "                          f'{catch_lot_df.DATE_OF_COLLECTION.unique()}')"
    ]
   },
   {
