misc fixes based on real manifests processing

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -63,7 +63,7 @@
     "    # RACK_OR_PLATE_ID, TUBE_OR_WELL_ID\n",
     "    df, gal, partner_code = validate_plates_wells(df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
     "    # check blanks\n",
-    "    is_blank = check_blanks(df)\n",
+    "    df, is_blank = check_blanks(df)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
     "        logging.error('no non-blank samples to validate, terminating')\n",
     "        return df\n",
