--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V3_20230818.xlsx', \n",
+    "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V3_20240301.xlsx', \n",
     "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
     "                     verbose=False, write_sts=True, bold_input=False):\n",
     "    '''\n",
@@ -62,10 +62,11 @@
     "\n",
     "    # orange cols\n",
     "    validate_regex('CATCH_LOT', df, na_values=[])\n",
+    "    \n",
     "    df, gal, partner_code = validate_plates_wells(\n",
     "        df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True, bioscan_version=v)\n",
     "    # check and exclude blanks\n",
-    "    is_blank = check_blanks(df)\n",
+    "    df, is_blank = check_blanks(df)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
     "        logging.error('no non-blank samples to validate, terminating')\n",
     "        return df\n",
@@ -86,6 +87,7 @@
     "                    df[~is_blank & (df['COLLECTION_METHOD'] == 'MALAISE_TRAP')], # allow for blank in non-Malaise trap samples\n",
     "                    valid_dict)\n",
     "    validate_regex('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
+    "    check_catch_lot_dates(df[~is_blank])\n",
     "    validate_regex('DECIMAL_LATITUDE', df[~is_blank], na_values=[])\n",
     "    validate_regex('DECIMAL_LONGITUDE', df[~is_blank], na_values=[])\n",
     "    # COUNTRY_OF_COLLECTION, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
@@ -150,9 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fn = '../../results/partner_manifests/IRD-Neandersquito_T222Amplicon_Manifest_V2.0.xlsx'\n",
-    "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V3_20230818.xlsx', \n",
-    "                      template_fn='../data/BIOSCAN_Manifest_V3_20230818.xlsx', \n",
+    "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V3_20240301.xlsx', \n",
+    "                      template_fn='../data/BIOSCAN_Manifest_V3_20240301.xlsx', \n",
     "                      verbose=False,\n",
     "                      samples_sheet='TAB 6 TEST',\n",
     "                      write_sts=True)"
@@ -183,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20231013_js_batch19/WFEN_202309_BIOSCAN_Manifest_V3.xlsx'\n",
+    "fn = '../results/20240304_shap_test/SHAP_2401_BIOSCAN_Manifest_V3_old.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
