--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -829,7 +829,7 @@
     "                 f'will be further validated')\n",
     "    \n",
     "    \n",
-    "    return is_blank\n",
+    "    return df, is_blank\n",
     "\n",
     "# print(df.shape)\n",
     "# is_blank = check_blanks(df)\n",
@@ -878,7 +878,7 @@
     "                invalid_value_series = index_ranges(series[series.str.contains(\n",
     "                    r'(?:^|\\|)' + invalid_value + r'(?:$|\\|)', regex=True)])\n",
     "            else:\n",
-    "                invalid_value_series = index_ranges(series[series.isin(invalid_values)])\n",
+    "                invalid_value_series = index_ranges(series[series == invalid_value])\n",
     "            msg = f'invalid value in {col} column, SERIES {invalid_value_series}: \"{invalid_value}\"'\n",
     "            if level == 'i':\n",
     "                logging.info(msg)\n",
@@ -996,7 +996,7 @@
     "    else:\n",
     "        # web map server - openstreetmaps\n",
     "        logging.debug('querying coordinates')\n",
-    "        locator = Nominatim(user_agent='myGeocoder')\n",
+    "        locator = Nominatim(user_agent='bioscanManifestTest')\n",
     "        rgeocode = RateLimiter(locator.reverse, min_delay_seconds=1)\n",
     "\n",
     "        locations = dict()\n",
