clean up reporting for trailing spaces and extra info in blanks, G12 sample warning, add expectations to messages

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -403,12 +403,19 @@
    "outputs": [],
    "source": [
     "def remove_trailing_spaces(df):\n",
+    "    \n",
+    "    any_trailing_spaces = False\n",
+    "    \n",
     "    for col in df.columns:\n",
     "        trailing_spaces = (df[col].str.startswith(' ') | df[col].str.endswith(' '))\n",
     "        if trailing_spaces.any():\n",
-    "            logging.info(f'trailing spaces found in {col} column, '\n",
+    "            logging.debug(f'trailing spaces found in {col} column, '\n",
     "                         f'SERIES {index_ranges(df.loc[trailing_spaces])} - removing for validation and output')\n",
     "            df[col] = df[col].str.strip()\n",
+    "            any_trailing_spaces = True\n",
+    "            \n",
+    "    if any_trailing_spaces:\n",
+    "        logging.info('removed some trailing spaces from the manifest')\n",
     "            \n",
     "    return df\n",
     "\n",
@@ -623,7 +630,7 @@
     "            offending_values = list(series[~is_recommended_regex & is_valid_regex].unique())\n",
     "            s = index_ranges(series[~is_recommended_regex & is_valid_regex])\n",
     "            msg = (f'{col} format suggestion for SERIES {s}: found {offending_values} - '\n",
-    "                  f'should be in PT[n]H format')\n",
+    "                  f'we ask to use PT[n]H format (hours only)')\n",
     "            logging.warning(msg)\n",
     "        "
    ]
@@ -793,7 +800,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_blanks(df):\n",
+    "def check_blanks(df, bioscan=False):\n",
     "    \n",
     "    logging.debug('checking and excluding blank samples based on ORGANISM_PART being NOT_APPLICABLE')    \n",
     "    \n",
@@ -813,6 +820,18 @@
     "                      f'these samples will be included in further analysis',\n",
     "                        \n",
     "        )\n",
+    "    \n",
+    "    if bioscan:\n",
+    "        non_blank_penultimate_well_df = non_blank_df.query('TUBE_OR_WELL_ID == \"G12\"')\n",
+    "        if non_blank_penultimate_well_df.shape[0] > 0:\n",
+    "            logging.warning(\n",
+    "                f'well G12 is not blank at SERIES {index_ranges(non_blank_penultimate_well_df)}: '\n",
+    "                f'in ORGANISM_PART, expected \"NOT_APPLICABLE\", '\n",
+    "                f'found {set(non_blank_penultimate_well_df.ORGANISM_PART.to_list())}, '\n",
+    "                f'these samples will not be sequenced',\n",
+    "            )\n",
+    "\n",
+    "    any_excessive_blank_info = False\n",
     "        \n",
     "    for col in df.columns:\n",
     "        if col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
@@ -820,9 +839,13 @@
     "                       'OTHER_INFORMATION','MISC_METADATA']:\n",
     "            excessive_blank_info_df = blank_df[blank_df[col] != '']\n",
     "            if excessive_blank_info_df.shape[0] > 0:\n",
-    "                logging.info(f'{col} column values non-empty for blank samples '\n",
+    "                logging.debug(f'{col} column values non-empty for blank samples '\n",
     "                              f'at SERIES {index_ranges(excessive_blank_info_df)} - these will be deleted')\n",
     "                df.loc[is_blank, col] = ''\n",
+    "                any_excessive_blank_info = True\n",
+    "    \n",
+    "    if any_excessive_blank_info:\n",
+    "        logging.info('removed some excessive information from blank samples')\n",
     "    \n",
     "    logging.info(f'found and checked {is_blank.sum()} blank samples, '\n",
     "                 f'{non_blank_df.shape[0]} non-blank samples and plate-only entries '\n",
@@ -931,8 +954,8 @@
     "    \n",
     "    for catch_lot, catch_lot_df in biosc_catch_lot_df.groupby('CATCH_LOT'):\n",
     "        if catch_lot_df.DATE_OF_COLLECTION.nunique() > 1:\n",
-    "            logging.error(f'catch lot {catch_lot} entries span multiple dates: '\n",
-    "                          f'{catch_lot_df.DATE_OF_COLLECTION.unique()}')"
+    "            logging.error(f'catch lot {catch_lot} entries span multiple dates - '\n",
+    "                          f'{catch_lot_df.DATE_OF_COLLECTION.unique()} - one catch lot must be from one date')"
    ]
   },
   {
@@ -1108,7 +1131,7 @@
     "    }\n",
     "    \n",
     "    expected_ranks = {\n",
-    "            'order':('class','subclass','superorder','order','suborder'),\n",
+    "            'order':('subphylum','class','subclass','superorder','order','suborder'),\n",
     "            'family':('suborder','superfamily','family','subfamily','tribe','subtribe'),\n",
     "            'genus':('genus','subgenus'),\n",
     "            'species':('species')\n",
