G12 check logic update to bioscan

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -66,7 +66,7 @@
     "    df, gal, partner_code = validate_plates_wells(\n",
     "        df, contrib_df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True, bioscan_version=v)\n",
     "    # check and exclude blanks\n",
-    "    df, is_blank = check_blanks(df)\n",
+    "    df, is_blank = check_blanks(df, bioscan=True)\n",
     "    if df[~is_blank].shape[0] == 0:\n",
     "        logging.error('no non-blank samples to validate, terminating')\n",
     "        return df\n",
@@ -181,10 +181,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6a82cc40",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "fn = '../results/20240304_shap_test/SHAP_2401_BIOSCAN_Manifest_V3_old.xlsx'\n",
+    "fn = '../results/20240304_shap_test/SHAP_2401_BIOSCAN_Manifest_V3.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
