prep for release

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "VALIDATION_VERSION = '0.3.0dev'\n",
+    "VALIDATION_VERSION = '0.3.1'\n",
     "ANOSPP_VERSION = '4.0'\n",
     "# V2.0, but V3 in SOP\n",
     "BIOSCAN_VERSION = '3'"
