--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -123,7 +123,7 @@
     "    validate_freetext('VOUCHER_ID', df)\n",
     "    validate_regex('ELEVATION', df, na_values=[''])\n",
     "    validate_freetext('OTHER_INFORMATION', df)\n",
-    "    validate_freetext('MISC_METADATA', df)\n",
+    "    # validate_freetext('MISC_METADATA', df)\n",
     "    validate_identifier('IDENTIFIED_BY', df, contrib_df, na_values=[''])\n",
     "    \n",
     "    df = expand_plate_only(df)\n",
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "fn = '../results/20240304_shap_test/SHAP_2401_BIOSCAN_Manifest_V3.xlsx'\n",
+    "fn = '../results/20240626_misc_meta_test/SPGW_2406_BIOSCAN_Manifest_V3.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', verbose=False)"
    ]
   },
