second BGE manifest validation updates bold parsing, minor reporting adjustments

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -46,7 +46,7 @@
     "    df = validate_series(df)\n",
     "    # clean up data\n",
     "    df = remove_nonbreaking_spaces(df)\n",
-    "    df = remove_trailing_spaces(df)\n",
+    "    df = remove_trailing_spaces(df, title='sample')\n",
     "    \n",
     "    # read NCBI taxonomy\n",
     "    ncbi = ete3.NCBITaxa()\n",
