--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -44,7 +44,7 @@
     "    df = validate_series(df)\n",
     "    # clean up data\n",
     "    df = remove_nonbreaking_spaces(df)\n",
-    "    df = remove_trailing_spaces(df)\n",
+    "    df = remove_trailing_spaces(df, title='sample')\n",
     "    \n",
     "    # read NCBI taxonomy\n",
     "    ncbi = ete3.NCBITaxa()\n",
@@ -197,7 +197,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20231006_bold_test/BGE_single_specimen_metadata&biobanking_sheet_v5_Yulia_Guglia_Diptera_12_plates.xlsx'\n",
+    "%run validate_partner_manifest_dev.ipynb\n",
+    "fn = '../results/20240730_bold_bge_poland/BGEP_am60.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors', \n",
     "                      verbose=False, bold_input=True)"
    ]
@@ -205,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40a9e9aa",
+   "id": "71fc49bf",
    "metadata": {},
    "outputs": [],
    "source": []
