--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "anospp_fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'\n",
-    "biosc_fn = '../data/BIOSCAN_Manifest_V3_20230818.xlsx'"
+    "biosc_fn = '../data/BIOSCAN_Manifest_V3_20240301.xlsx'"
    ]
   },
   {
@@ -113,8 +113,15 @@
     "    \n",
     "    logging.info(f'parsing bold manifest from \"{fn}\" sheet \"{sheet}\"')\n",
     "    \n",
+    "    # second BGE manifest header\n",
     "    df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
-    "                       sheet_name=sheet, header=3).iloc[3:]\n",
+    "                       sheet_name=sheet, header=1).iloc[1:]\n",
+    "    if 'Plate ID' not in df.columns:\n",
+    "        # first BGE manifest header\n",
+    "        df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
+    "                           sheet_name=sheet, header=3).iloc[3:]\n",
+    "    if ('Plate ID' not in df.columns) or (df['Well Position'].iloc[0] != 'A01'):\n",
+    "        raise ValueError('could not parse bold manifest')\n",
     "    \n",
     "    df.index = (i + 1 for i in range(df.shape[0]))\n",
     "    df.index.name = 'SERIES'\n",
@@ -207,8 +214,6 @@
     "    \n",
     "    df.rename(columns=col_mapping, inplace=True)\n",
     "    \n",
-    "    \n",
-    "    \n",
     "    # reorder columns, add missing, remove \"LEAVE BLANK\" values\n",
     "    for col in template_df.columns:\n",
     "        if col not in df.columns:\n",
@@ -219,17 +224,52 @@
     "            }, inplace=True)\n",
     "    df = df[template_df.columns]\n",
     "    \n",
-    "    # contents adjustments\n",
+    "    # strip leading zeroes from well ids\n",
     "    df['TUBE_OR_WELL_ID'] = df['TUBE_OR_WELL_ID'].str.replace(\n",
     "        '([A-H])0', r'\\1', regex=True\n",
     "    )\n",
+    "    \n",
+    "    # blanks handling\n",
+    "    for i, r in df[df['ORGANISM_PART'] == ''].iterrows():\n",
+    "        df.loc[i, 'ORGANISM_PART'] = 'NOT_APPLICABLE'\n",
+    "        if df.loc[i, 'TUBE_OR_WELL_ID'] == '':\n",
+    "            # originally we wanted to backfill well IDs, \n",
+    "            # but BGEP has varying order of wells in the manifest\n",
+    "            # thus not handling for now\n",
+    "            raise ValueError(f'Cannot handle empty well ids for blanks, row {i+1}')\n",
+    "        elif r['TUBE_OR_WELL_ID'] == 'A1':\n",
+    "            raise ValueError(f'Cannot handle blanks at A1, row {i+1}')\n",
+    "        df.loc[i, 'RACK_OR_PLATE_ID'] = df.loc[i-1, 'RACK_OR_PLATE_ID']\n",
+    "        df.loc[i, 'PRESERVATIVE_SOLUTION'] = df.loc[i-1, 'PRESERVATIVE_SOLUTION']\n",
+    "\n",
+    "    # sts manifest is ordered as A1,B1\n",
+    "    sts_well_ids = []\n",
+    "    for col in range(1,13):\n",
+    "        for row in 'ABCDEFGH':\n",
+    "            sts_well_ids.append(f'{row}{col}')\n",
+    "    well_order_cat = pd.CategoricalDtype(sts_well_ids, ordered=True)\n",
+    "    df['TUBE_OR_WELL_ID'] = df['TUBE_OR_WELL_ID'].astype(well_order_cat)\n",
+    "    plate_order_cat = pd.CategoricalDtype(df.RACK_OR_PLATE_ID.drop_duplicates(), ordered=True)\n",
+    "    df['RACK_OR_PLATE_ID'] = df['RACK_OR_PLATE_ID'].astype(plate_order_cat)\n",
+    "    df = df.sort_values(by=['RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID'])\n",
+    "    for col in ['RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID']:\n",
+    "        df[col] = df[col].astype(str)\n",
+    "    # reset index again\n",
+    "    df.index = (i + 1 for i in range(df.shape[0]))\n",
+    "    df.index.name = 'SERIES'\n",
+    "    \n",
+    "    # other contents adjustments\n",
     "    df['SEX'] = df['SEX'].str.upper()\n",
     "    df['LIFESTAGE'] = df['LIFESTAGE'].str.upper()\n",
     "    df['ORGANISM_PART'] = df['ORGANISM_PART'].str.upper().str.replace(', ', ' | ')\n",
     "    df['ORGANISM_PART'].replace({\n",
     "        'ORGANISM':'WHOLE_ORGANISM',\n",
     "        'WHOLE SPECIMEN':'WHOLE_ORGANISM',\n",
-    "        'WING':'OTHER_SOMATIC_TISSUE'\n",
+    "        'WHOLE_SPECIMEN':'WHOLE_ORGANISM',\n",
+    "        'HALF_SPECIMEN':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
+    "        'PIECE OF BODY':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
+    "        'MUSCLE TISSUE':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
+    "        'WING':'**OTHER_SOMATIC_ANIMAL_TISSUE**'\n",
     "    }, inplace=True)\n",
     "    df['PRESERVATIVE_SOLUTION'].replace({\n",
     "        'ethanol':'V%_ETHANOL',\n",
@@ -242,14 +282,6 @@
     "    species_identified = (df['PREDICTED_SCIENTIFIC_NAME'].str.contains('[a-z]', regex=True))\n",
     "    df.loc[species_identified, 'PREDICTED_SCIENTIFIC_NAME'] = df.loc[species_identified, 'PREDICTED_GENUS'].str.title() + \\\n",
     "            ' ' + df.loc[species_identified, 'PREDICTED_SCIENTIFIC_NAME'].str.lower()\n",
-    "    \n",
-    "    # blanks handling\n",
-    "    for i, r in df[df['ORGANISM_PART'] == ''].iterrows():\n",
-    "        df.loc[i, 'ORGANISM_PART'] = 'NOT_APPLICABLE'\n",
-    "        if r['TUBE_OR_WELL_ID'] == 'A1':\n",
-    "            raise ValueError(f'Cannot handle blanks at A1, row {i+1}')\n",
-    "        df.loc[i, 'RACK_OR_PLATE_ID'] = df.loc[i-1, 'RACK_OR_PLATE_ID']\n",
-    "        df.loc[i, 'PRESERVATIVE_SOLUTION'] = df.loc[i-1, 'PRESERVATIVE_SOLUTION']\n",
     "        \n",
     "    is_blank = (df['ORGANISM_PART'] == 'NOT_APPLICABLE')\n",
     "        \n",
@@ -257,12 +289,26 @@
     "    df['CATCH_LOT'] = 'NOT_APPLICABLE'\n",
     "    df.loc[~is_blank, 'CATCH_SOLUTION'] = df['PRESERVATIVE_SOLUTION']\n",
     "    df.loc[~is_blank, 'BOTTLE_DIRECTION'] = 'NOT_APPLICABLE'\n",
-    "    df.loc[df['DESCRIPTION_OF_COLLECTION_METHOD'].str.contains('pan trap'), 'COLLECTION_METHOD'] = 'PAN_TRAP'\n",
     "    df.loc[~is_blank, 'AMOUNT_OF_CATCH_PLATED'] = 'NOT_APPLICABLE'\n",
+    "    \n",
+    "    # encoding\n",
+    "    \n",
+    "    # encoding for collection method\n",
+    "    df.loc[df['DESCRIPTION_OF_COLLECTION_METHOD'].str.lower() \\\n",
+    "           .str.contains('pan trap'), 'COLLECTION_METHOD'] = 'PAN_TRAP'\n",
+    "    logging.info(f'inferred {df[df.COLLECTION_METHOD == \"PAN_TRAP\"].shape[0]} samples collected with PAN_TRAP')\n",
+    "    df.loc[df['DESCRIPTION_OF_COLLECTION_METHOD'].str.lower() \\\n",
+    "           .str.contains('malaise trap'), 'COLLECTION_METHOD'] = 'MALAISE_TRAP'\n",
+    "    logging.info(f'inferred {df[df.COLLECTION_METHOD == \"MALAISE_TRAP\"].shape[0]} samples collected with MALAISE_TRAP')\n",
+    "    df.loc[df['DESCRIPTION_OF_COLLECTION_METHOD'].str.lower() \\\n",
+    "           .str.contains('sweep net'), 'COLLECTION_METHOD'] = 'AERIAL_NET'\n",
+    "    df.loc[~is_blank & (df.COLLECTION_METHOD == ''), 'COLLECTION_METHOD'] = '**OTHER**'\n",
+    "    \n",
     "    \n",
     "    return df\n",
     "# template_df = get_data(biosc_fn, sheet='TAB 2 Metadata Entry')\n",
-    "# bold_fn = '../results/20231006_bold_test/BGE_single_specimen_metadata&biobanking_sheet_v5_Kaliuzhna_Braconidae.xlsx'\n",
+    "# # bold_fn = '../results/20231006_bold_test/BGE_single_specimen_metadata&biobanking_sheet_v5_Kaliuzhna_Braconidae.xlsx'\n",
+    "# bold_fn = '../results/20240730_bold_bge_poland/BGEP_am60.xlsx'\n",
     "# df = parse_bold(bold_fn, template_df, 'BGE entry')\n",
     "# df"
    ]
@@ -402,7 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_trailing_spaces(df):\n",
+    "def remove_trailing_spaces(df, title):\n",
     "    \n",
     "    any_trailing_spaces = False\n",
     "    \n",
@@ -415,7 +461,7 @@
     "            any_trailing_spaces = True\n",
     "            \n",
     "    if any_trailing_spaces:\n",
-    "        logging.info('removed some trailing spaces from the manifest')\n",
+    "        logging.info(f'removed some trailing spaces from the {title} manifest')\n",
     "            \n",
     "    return df\n",
     "\n",
@@ -524,7 +570,7 @@
     "    df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
     "                       sheet_name=contrib_sheet)\n",
     "    \n",
-    "    df = remove_trailing_spaces(df)\n",
+    "    df = remove_trailing_spaces(df, title='contributors')\n",
     "    \n",
     "    if 'EMAIL ADDRESS' in df.columns:\n",
     "        logging.warning('replacing \"EMAIL ADDRESS\" with \"EMAIL_ADDRESS\" contributors column name')\n",
