--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -1487,11 +1487,12 @@
     "        logging.info('dropping IDENTIFIER_AFFILIATION column for bioscan manifest v2')\n",
     "        df = df.drop(columns=['IDENTIFIER_AFFILIATION'])\n",
     "    # add contributors - delimiters checked in validate_contributors\n",
-    "    contrib_series = contrib_df['FULL_NAME'] + ';' + \\\n",
-    "        contrib_df['PRIMARY_AFFILIATION'] + ';' + \\\n",
-    "        contrib_df['EMAIL_ADDRESS'] + ';' + \\\n",
-    "        contrib_df['CONTRIBUTION']\n",
-    "    df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
+    "    if bioscan:\n",
+    "        contrib_series = contrib_df['FULL_NAME'] + ';' + \\\n",
+    "            contrib_df['PRIMARY_AFFILIATION'] + ';' + \\\n",
+    "            contrib_df['EMAIL_ADDRESS'] + ';' + \\\n",
+    "            contrib_df['CONTRIBUTION']\n",
+    "        df['CONTRIBUTORS'] = '|'.join(list(contrib_series))\n",
     "    # add supplier sample name prefixes to control samples\n",
     "#     df['BIOSCAN_SUPPLIER_SAMPLE_NAME'] = df['SPECIMEN_ID']\n",
     "#     df.loc[is_blank, 'BIOSCAN_SUPPLIER_SAMPLE_NAME'] = 'CONTROL_NEG_LYSATE_' + df['SPECIMEN_ID']\n",
