upd ref to anosp template

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_anospp(fn, template_fn='../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx', \n",
+    "def validate_anospp(fn, template_fn='../data/Anopheles_Metadata_Manifest_V4.0_20240813.xlsx', \n",
     "                    verbose=False, samples_sheet='TAB 2 Metadata Entry',\n",
     "                    contrib_sheet='TAB 1 Contributors', write_sts=True):\n",
     "    '''\n",
@@ -121,10 +121,7 @@
     "    \n",
     "    print('\\n'.join(df.RACK_OR_PLATE_ID.unique()))\n",
     "    \n",
-    "    return df\n",
-    "\n",
-    "fn = '../data/Anopheles_Metadata_Manifest_V4.0_20221220.xlsx'\n",
-    "template_fn = fn"
+    "    return df"
    ]
   },
   {
@@ -134,6 +131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fn = '../data/Anopheles_Metadata_Manifest_V4.0_20240813.xlsx'\n",
+    "template_fn = fn\n",
     "df = validate_anospp(fn, template_fn, verbose=True, samples_sheet='TAB 3 TEST Metadata Entry')"
    ]
   },
@@ -162,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fn = '../results/20231019_a_poal_adad/Anopheles_Metadata_Manifest_V4.0_POAL_101623_am60.xlsx'\n",
+    "fn = '../results/20240819_mg/MANIFEST_MOSQUITOES_MADAGASCAR_am60_2.xlsx'\n",
     "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors')"
    ]
   },
