hotfix dict with separators parsing and problematic coordinate lookup

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -929,9 +929,10 @@
     "    col_values = set(series.unique())\n",
     "    # use separator to split values\n",
     "    if sep:\n",
+    "        series = series.apply(lambda v: [x.strip() for x in v.split(sep)])\n",
     "        sep_col_values = list()\n",
-    "        for v in col_values:\n",
-    "            sep_col_values.extend([x.strip() for x in v.split(sep)])\n",
+    "        for v in series:\n",
+    "            sep_col_values.extend(v)\n",
     "        col_values = set(sep_col_values)\n",
     "    \n",
     "    valid_values = set(valid_dict[col])\n",
@@ -943,9 +944,8 @@
     "            if invalid_value == '':\n",
     "                invalid_value_series = index_ranges(series[series == ''])\n",
     "            elif sep:\n",
-    "                # match pipe-separated\n",
-    "                invalid_value_series = index_ranges(series[series.str.contains(\n",
-    "                    r'(?:^|\\|)' + invalid_value + r'(?:$|\\|)', regex=True)])\n",
+    "                invalid_mask = series.apply(lambda v: invalid_value in v)\n",
+    "                invalid_value_series = index_ranges(series[invalid_mask])\n",
     "            else:\n",
     "                invalid_value_series = index_ranges(series[series == invalid_value])\n",
     "            msg = f'invalid value in {col} column, SERIES {invalid_value_series}: \"{invalid_value}\"'\n",
@@ -1036,7 +1036,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_country_and_coordinates(df, fn, na_values=[], bioscan=False):\n",
+    "def validate_country_and_coordinates(df, fn, na_values=[''], bioscan=False):\n",
     "    \n",
     "    logging.debug('validating COUNTRY_OF_COLLECTION against DECIMAL_LATITUDE and DECIMAL_LONGITUDE')\n",
     "    \n",
@@ -1059,7 +1059,7 @@
     "    # get location data for coordinates\n",
     "    # use local copy of web query results for re-runs\n",
     "    # this \n",
-    "    loc_fn = fn+'_loc.pkl'\n",
+    "    loc_fn = fn + '_loc.pkl'\n",
     "    if os.path.isfile(loc_fn):\n",
     "        locations = pickle.load(open(loc_fn, \"rb\"))\n",
     "    else:\n",
@@ -1074,7 +1074,7 @@
     "            locations[c] = {'address':{'country':'UNKNOWN'}}\n",
     "            # check coordniate correctness\n",
     "            try:\n",
-    "                lat, lon = c.split(', ')\n",
+    "                coord_list = c.split(', ')\n",
     "                lat, lon = float(lat), float(lon)\n",
     "            except:\n",
     "                unparsed_df = df[(df[lat_col] == str(lat)) & df[lon_col] == str(lon)]\n",
@@ -1107,8 +1107,13 @@
     "    # extract countries from location data\n",
     "    loc_countries = dict()\n",
     "    for coord in locations.keys():\n",
-    "        \n",
-    "        lat, lon = coord.split(', ')\n",
+    "        try:\n",
+    "            lat, lon = coord.split(', ')\n",
+    "        except:\n",
+    "                logging.error(\n",
+    "                    f'problem parsing coordinates {coord} in locations results'\n",
+    "                )\n",
+    "                continue\n",
     "        coord_series = index_ranges(df.query(f'({lat_col} == \"{lat}\") & ({lon_col} == \"{lon}\")'))\n",
     "                    \n",
     "        coord_country = locations[coord]['address']['country'].upper()\n",
