lat/lon 6 digits, upd coord logic

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -642,10 +642,10 @@
     "        'CATCH_LOT': (r'^C\\d{3}[A-Z]$|^NOT_APPLICABLE$', \n",
     "                      'like C123A or NOT_APPLICABLE'),\n",
     "        'DATE_OF_COLLECTION': (date_regex, 'in YYYY-MM-DD format'),\n",
-    "        'DECIMAL_LATITUDE': (r'^[-+]?([0-8]\\d|\\d)(\\.\\d+)?$', \n",
-    "                             'between -90 and 90'),\n",
-    "        'DECIMAL_LONGITUDE': (r'^[-+]?(1[0-7]\\d|\\d\\d|\\d)(\\.\\d+)?$', \n",
-    "                              'between -180 and 180'),\n",
+    "        'DECIMAL_LATITUDE': (r'^[-+]?([0-8]\\d|\\d)(\\.\\d{1,6})?$', \n",
+    "                             'between -90 and 90 with up to 6 decimals'),\n",
+    "        'DECIMAL_LONGITUDE': (r'^[-+]?(1[0-7]\\d|\\d\\d|\\d)(\\.\\d{1,6})?$', \n",
+    "                              'between -180 and 180 with up to 6 decimals'),\n",
     "        'WHAT_3_WORDS': (r'^///[a-z]+\\.[a-z]+\\.[a-z]+$', \n",
     "                         'like ///one.two.three'),\n",
     "        'TIME_OF_COLLECTION': (r'^(?:[01]\\d|2[0-3]):[0-5]\\d$|^(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d$', \n",
@@ -1073,8 +1073,10 @@
     "            # pre-fill with unknown country\n",
     "            locations[c] = {'address':{'country':'UNKNOWN'}}\n",
     "            # check coordniate correctness\n",
+    "            coord_list = c.split(', ')\n",
+    "            lat = coord_list[0]\n",
+    "            lon = coord_list[1]\n",
     "            try:\n",
-    "                coord_list = c.split(', ')\n",
     "                lat, lon = float(lat), float(lon)\n",
     "            except:\n",
     "                unparsed_df = df[(df[lat_col] == str(lat)) & df[lon_col] == str(lon)]\n",
