--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -236,7 +236,7 @@
     "            # originally we wanted to backfill well IDs, \n",
     "            # but BGEP has varying order of wells in the manifest\n",
     "            # thus not handling for now\n",
-    "            raise ValueError(f'Cannot handle empty well ids for blanks, row {i+1}')\n",
+    "            raise ValueError(f'Cannot handle empty well ids for blanks, row {i+1} - please fill')\n",
     "        elif r['TUBE_OR_WELL_ID'] == 'A1':\n",
     "            raise ValueError(f'Cannot handle blanks at A1, row {i+1}')\n",
     "        df.loc[i, 'RACK_OR_PLATE_ID'] = df.loc[i-1, 'RACK_OR_PLATE_ID']\n",
@@ -261,21 +261,44 @@
     "    # other contents adjustments\n",
     "    df['SEX'] = df['SEX'].str.upper()\n",
     "    df['LIFESTAGE'] = df['LIFESTAGE'].str.upper()\n",
-    "    df['ORGANISM_PART'] = df['ORGANISM_PART'].str.upper().str.replace(', ', ' | ')\n",
+    "    df['ORGANISM_PART'] = df['ORGANISM_PART'].str.upper() \\\n",
+    "        .str.replace(', ', ' | ').str.strip()\n",
     "    df['ORGANISM_PART'].replace({\n",
+    "        'LEGS':'LEG',\n",
+    "        'WINGS':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
+    "        'WING':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
+    "        'ABDOMEN | LEGS':'ABDOMEN | LEG',\n",
+    "        'HEAD | LEGS':'HEAD | LEG',\n",
+    "        'BODY':'WHOLE_ORGANISM',\n",
+    "        'WHOLE':'WHOLE_ORGANISM',\n",
+    "        'WHOLE BODY':'WHOLE_ORGANISM',\n",
+    "        'WHOLE ORGANISM':'WHOLE_ORGANISM',\n",
     "        'ORGANISM':'WHOLE_ORGANISM',\n",
     "        'WHOLE SPECIMEN':'WHOLE_ORGANISM',\n",
     "        'WHOLE_SPECIMEN':'WHOLE_ORGANISM',\n",
+    "        'SOMATIC PART':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
+    "        'TAIL':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
+    "        'ANTENA':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
+    "        'ANTENNA':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'HALF_SPECIMEN':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'PIECE OF BODY':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
     "        'MUSCLE TISSUE':'**OTHER_SOMATIC_ANIMAL_TISSUE**',\n",
-    "        'WING':'**OTHER_SOMATIC_ANIMAL_TISSUE**'\n",
     "    }, inplace=True)\n",
     "    df['PRESERVATIVE_SOLUTION'].replace({\n",
+    "        'Ethanol':'V%_ETHANOL',\n",
     "        'ethanol':'V%_ETHANOL',\n",
-    "        'dry':'NONE'\n",
+    "        'dry':'NONE',\n",
+    "        '':'NONE' # problem with blanks?\n",
     "    }, inplace=True)\n",
-    "    df['DATE_OF_COLLECTION'] = df['DATE_OF_COLLECTION'].str.split('/').str.get(-1)\n",
+    "    df['CATCH_SOLUTION'].replace({\n",
+    "        'Ethanol':'V%_ETHANOL',\n",
+    "        'ethanol':'V%_ETHANOL',\n",
+    "        'dry':'NONE',\n",
+    "        '':'NONE' # problem with blanks?\n",
+    "    }, inplace=True)\n",
+    "    df['DECIMAL_LATITUDE'] = df['DECIMAL_LATITUDE'].replace('', np.nan).astype(float).round(6).astype(str)\n",
+    "    df['DECIMAL_LONGITUDE'] = df['DECIMAL_LONGITUDE'].replace('', np.nan).astype(float).round(6).astype(str)\n",
+    "    # df['DATE_OF_COLLECTION'] = df['DATE_OF_COLLECTION'].str.split('/').str.get(-1)\n",
     "    df['DATE_OF_COLLECTION'] = pd.to_datetime(df['DATE_OF_COLLECTION'], errors='coerce') \\\n",
     "            .dt.strftime('%Y-%m-%d') \\\n",
     "            .fillna('')\n",
@@ -288,6 +311,7 @@
     "    # auto-fill\n",
     "    df['CATCH_LOT'] = 'NOT_APPLICABLE'\n",
     "    df.loc[~is_blank, 'CATCH_SOLUTION'] = df['PRESERVATIVE_SOLUTION']\n",
+    "    df.loc[is_blank, 'CATCH_SOLUTION'] = ''\n",
     "    df.loc[~is_blank, 'BOTTLE_DIRECTION'] = 'NOT_APPLICABLE'\n",
     "    df.loc[~is_blank, 'AMOUNT_OF_CATCH_PLATED'] = 'NOT_APPLICABLE'\n",
     "    \n",
